added stream module
Each dataset is assigned with a streamer class to process the data generated and sent by the parsers

--- a/streamer/pom.xml
+++ b/streamer/pom.xml
@@ -27,5 +27,12 @@
   		<artifactId>commons-compress</artifactId>
   		<version>1.18</version>
   	</dependency>
+  	<dependency>
+    <groupId>org.apache.flink</groupId>
+    <artifactId>flink-streaming-java_2.12</artifactId>
+    <version>1.7.2</version>
+    <scope>provided</scope>
+</dependency>
+  	
   </dependencies>
 </project>
