reformat the code to merge the modification made by furqan

--- a/streamer/streamer.properties
+++ b/streamer/streamer.properties
@@ -1,4 +1,5 @@
-aot-data-dir=/Users/furqan/Workspace/iotdb/sample_data/chicago-complete.daily.2019-03-31/
+# aot-data-dir=/Users/furqan/Workspace/iotdb/sample_data/chicago-complete.daily.2019-03-31/
+aot-data-dir=data/aotdata
 # optional
 #aot-data-file=
 taxi-data-path=/some/path
