formalized the temperature data in climate data set

--- a/streamer/streamer.properties
+++ b/streamer/streamer.properties
@@ -3,6 +3,11 @@ aot-data-dir=data/aotdata
 # optional
 #aot-data-file=
 taxi-data-path=/some/path
-climate-data-path=/some/path
+# with the daily normals data
+# climate-data-dir=C:/Users/t84122723/Downloads/ghcnd_all/ghcnd_all
+climate-data-dir=C:/Users/t84122723/Downloads/ghcnd_all/ghcnd_all
+
+# with stations and states information
+climate-meta-dir=data/climate
 stream-host=127.0.0.1
 stream-port=9000
