implement the climate change alert on the climate data

--- a/streamer/streamer.properties
+++ b/streamer/streamer.properties
@@ -5,7 +5,9 @@ aot-data-dir=data/aotdata
 taxi-data-path=/some/path
 # with the daily normals data
 # climate-data-dir=C:/Users/t84122723/Downloads/ghcnd_all/ghcnd_all
-climate-data-dir=C:/Users/t84122723/Downloads/ghcnd_all/ghcnd_all
+climate-data-dir=D:/ghcnd_all/ghcnd_all
+climate-data-dir-small=D:/ghcnd_all/ghcnd_small
+climate-data-dir-tiny=D:/ghcnd_all/ghcnd_tiny
 
 # with stations and states information
 climate-meta-dir=data/climate
