--- a/streamer/streamer.properties
+++ b/streamer/streamer.properties
@@ -7,9 +7,9 @@ taxi-data-path=/some/path
 # climate-data-dir=C:/Users/t84122723/Downloads/ghcnd_all/ghcnd_all
 climate-data-dir=D:/ghcnd_all/ghcnd_all
 climate-data-dir-small=D:/ghcnd_all/ghcnd_small
-climate-data-dir-tiny=D:/ghcnd_all/ghcnd_tiny
+climate-data-dir-tiny=D:/climate/transposed
 
 # with stations and states information
-climate-meta-dir=data/climate
+climate-meta-dir=D:/data/climate
 stream-host=127.0.0.1
 stream-port=9000
