--- a/streamer/streamer.properties
+++ b/streamer/streamer.properties
@@ -1,5 +1,5 @@
 # aot-data-dir=/Users/furqan/Workspace/iotdb/sample_data/chicago-complete.daily.2019-03-31/
-aot-data-dir=data/aotdata
+aot-data-dir=/home/cloudera/Downloads/chicago-complete.daily.2019-09-03
 # optional
 #aot-data-file=
 taxi-data-path=/some/path
