--- a/streamer/pom.xml
+++ b/streamer/pom.xml
@@ -70,12 +70,18 @@
       <version>1.18</version>
     </dependency>
 
-    <dependency>
-      <groupId>org.apache.flink</groupId>
-      <artifactId>flink-streaming-java_2.12</artifactId>
-      <version>1.7.2</version>
-      <scope>provided</scope>
-    </dependency>
+<dependency>
+    <groupId>org.apache.flink</groupId>
+    <artifactId>flink-streaming-java</artifactId>
+    <version>1.20.0</version>
+    <scope>provided</scope>
+</dependency>
+
+<dependency>
+    <groupId>org.apache.flink</groupId>
+    <artifactId>flink-clients</artifactId>
+    <version>1.20.0</version>
+</dependency>
 
   </dependencies>
 </project>
